--- a/CURD.html
+++ b/CURD.html
@@ -10,7 +10,7 @@
     <input type="text" id="inputname" placeholder="NAME">
     <input type="email" id="inputage" placeholder="enter email">
     <button onclick="Addusers()" id="">add users</button>
-    <ul id="usersdata"></ul>
+    <ul id="usersdata">this </ul>
     <script src="./CURD.js"></script>
 </body>
 </html>
